SERVER-79771 Add retry on NetworkTimeout category errors